Add opt-in CDP extension configure path
